--- a/index.html
+++ b/index.html
@@ -4,10 +4,40 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="main/reset.css" />
     <link rel="stylesheet" href="main/style.css" />
     <title>Treva</title>
   </head>
   <body>
-    <h1>COMMING SOON . . .</h1>
+    <header class="top__header" style="background-color: aqua">
+      <nav class="horizontal-align wrapper header__nav">
+        <a href="#!" class="logo logo__size">
+          <img class="logo__size" src="assets/img/treva.png" alt="logo" />
+        </a>
+        <div class="header__nav-holder">
+          <a class="header__nav-item inline-block" href="#!">Sign In</a>
+          <a
+            class="header__nav-item header__nav-item--active inline-block"
+            href="#!"
+          >
+            Sign Up
+          </a>
+        </div>
+      </nav>
+    </header>
+    <section class="hero">
+      <main class="hero__content horizontal-align">
+        <h1 class="hero__heading">Find Your Dream Job Here</h1>
+        <p class="hero__desc">
+          Filium morte multavit si sine dubio praeclara sunt, explicabo nemo
+          enim ad minima. Probabo, inquit, modo ista sis aequitate, quam ob rem
+          aperiam eaque gaudere ut.
+        </p>
+        <div class="hero__btn-holder">
+          <a class="hero__btn hero__btn-bgcolor inline-block" href="#!">Hire</a>
+          <a class="hero__btn hero__btn-border inline-block" href="#!">Work</a>
+        </div>
+      </main>
+    </section>
   </body>
 </html>
