--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>Treva</title>
   </head>
   <body>
-    <header class="top__header" style="background-color: aqua">
+    <header class="top__header">
       <nav class="horizontal-align wrapper header__nav">
         <a href="#!" class="logo logo__size">
           <img class="logo__size" src="assets/img/treva.png" alt="logo" />
@@ -38,6 +38,53 @@
           <a class="hero__btn hero__btn-border inline-block" href="#!">Work</a>
         </div>
       </main>
+    </section>
+    <section class="hire-warp">
+      <header class="warp__header horizontal-align">
+        <h3 class="warp__heading">Hire</h3>
+        <nav class="warp__nav">
+          <div class="warp__nav-item warp__nav-item-blue inline-block">
+            <div class="nav-item__circle nav-item__circle-blue inline-block">
+              <figure class="nav-item__circle-icon">
+                <img
+                  src="assets/img/edit.svg"
+                  alt="edit"
+                  width="16"
+                  height="16"
+                />
+              </figure>
+            </div>
+            <p class="nav-item__text nav-item__text-blue inline-block">Post</p>
+          </div>
+          <div class="warp__nav-item warp__nav-item-red inline-block">
+            <div class="nav-item__circle nav-item__circle-red inline-block">
+              <figure class="nav-item__circle-icon">
+                <img
+                  src="assets/img/tick-icon.svg"
+                  alt="verified"
+                  width="16"
+                  height="16"
+                />
+              </figure>
+            </div>
+            <p class="nav-item__text inline-block">Applied</p>
+          </div>
+          <div class="warp__nav-item warp__nav-item-green inline-block">
+            <div class="nav-item__circle nav-item__circle-green inline-block">
+              <figure class="nav-item__circle-icon">
+                <img
+                  src="assets/img/people.svg"
+                  alt="people"
+                  width="16"
+                  height="16"
+                />
+              </figure>
+            </div>
+            <p class="nav-item__text inline-block">Assigned</p>
+          </div>
+        </nav>
+      </header>
+      <p>dssssaaaaaaaaaaaaaaaaaaa</p>
     </section>
   </body>
 </html>
