--- a/index.html
+++ b/index.html
@@ -84,7 +84,89 @@
           </div>
         </nav>
       </header>
-      <p>dssssaaaaaaaaaaaaaaaaaaa</p>
+      <div class="hire__bg-right">
+        <div class="container horizontal-align">
+          <aside class="hire__card-left">
+            <article class="hire__card-left-content">
+              <h4 class="hire__card-left-heading">The Amazing Hubble</h4>
+              <p class="hire__card-left-desc">
+                Filium morte multavit si sine dubio praeclara sunt, explicabo
+                nemo enim ad minima. Probabo, inquit, modo ista sis aequitate,
+                quam ob rem aperiam eaque gaudere ut. t vero eos et caritatem,
+                quae ab eo ortum, tam crudelis fuisse, nihil. Et quidem rerum
+                necessitatibus saepe eveniet
+              </p>
+            </article>
+          </aside>
+        </div>
+      </div>
+      <div class="hire__bg-left">
+        <div class="container horizontal-align">
+          <aside class="hire__card-right float-r">
+            <article class="hire__card-right-content">
+              <h4 class="hire__card-right-heading">
+                What If They Let You Run The Hubble
+              </h4>
+              <p class="hire__card-right-desc">
+                There is no denying the fact that the success of an
+                advertisement lies mostly in the headline. The headline should
+                attract the reader and make him read the rest of the
+                advertisement. The headline should be simply catchy and various
+                key points should be embedded when deciding on the headline for
+                the ad. The headline should catch attention of the eye at the
+                first glance. Words in headlines should act as tags for the
+                advertisement. It should say it all about the content
+              </p>
+            </article>
+          </aside>
+        </div>
+      </div>
+    </section>
+    <section class="work-warp">
+      <header class="warp__header horizontal-align">
+        <h3 class="warp__heading">Hire</h3>
+        <nav class="warp__nav">
+          <div class="warp__nav-item warp__nav-item-blue inline-block">
+            <div class="nav-item__circle nav-item__circle-blue inline-block">
+              <figure class="nav-item__circle-icon">
+                <img
+                  src="assets/img/edit.svg"
+                  alt="edit"
+                  width="16"
+                  height="16"
+                />
+              </figure>
+            </div>
+            <p class="nav-item__text nav-item__text-blue inline-block">Post</p>
+          </div>
+          <div class="warp__nav-item warp__nav-item-red inline-block">
+            <div class="nav-item__circle nav-item__circle-red inline-block">
+              <figure class="nav-item__circle-icon">
+                <img
+                  src="assets/img/tick-icon.svg"
+                  alt="verified"
+                  width="16"
+                  height="16"
+                />
+              </figure>
+            </div>
+            <p class="nav-item__text inline-block">Applied</p>
+          </div>
+          <div class="warp__nav-item warp__nav-item-green inline-block">
+            <div class="nav-item__circle nav-item__circle-green inline-block">
+              <figure class="nav-item__circle-icon">
+                <img
+                  src="assets/img/people.svg"
+                  alt="people"
+                  width="16"
+                  height="16"
+                />
+              </figure>
+            </div>
+            <p class="nav-item__text inline-block">Assigned</p>
+          </div>
+        </nav>
+      </header>
     </section>
   </body>
 </html>
