--- a/index.html
+++ b/index.html
@@ -4,8 +4,14 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="main/reset.css" />
-    <link rel="stylesheet" href="main/style.css" />
+    <!-- <link rel="stylesheet" href="sass/reset.css" /> -->
+    <link
+      rel="stylesheet"
+      href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
+      integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="main.css" />
     <title>Treva</title>
   </head>
   <body>
@@ -88,8 +94,8 @@
         <div class="container horizontal-align">
           <aside class="hire__card-left">
             <article class="hire__card-left-content">
-              <h4 class="hire__card-left-heading">The Amazing Hubble</h4>
-              <p class="hire__card-left-desc">
+              <h4 class="card-heading">The Amazing Hubble</h4>
+              <p class="card-desc">
                 Filium morte multavit si sine dubio praeclara sunt, explicabo
                 nemo enim ad minima. Probabo, inquit, modo ista sis aequitate,
                 quam ob rem aperiam eaque gaudere ut. t vero eos et caritatem,
@@ -104,10 +110,8 @@
         <div class="container horizontal-align">
           <aside class="hire__card-right float-r">
             <article class="hire__card-right-content">
-              <h4 class="hire__card-right-heading">
-                What If They Let You Run The Hubble
-              </h4>
-              <p class="hire__card-right-desc">
+              <h4 class="card-heading">What If They Let You Run The Hubble</h4>
+              <p class="card-desc">
                 There is no denying the fact that the success of an
                 advertisement lies mostly in the headline. The headline should
                 attract the reader and make him read the rest of the
@@ -124,26 +128,26 @@
     </section>
     <section class="work-warp">
       <header class="warp__header horizontal-align">
-        <h3 class="warp__heading">Hire</h3>
+        <h3 class="warp__heading">Work</h3>
         <nav class="warp__nav">
-          <div class="warp__nav-item warp__nav-item-blue inline-block">
-            <div class="nav-item__circle nav-item__circle-blue inline-block">
+          <div class="warp__nav-item warp__nav-item-pink inline-block">
+            <div class="nav-item__circle nav-item__circle-pink inline-block">
               <figure class="nav-item__circle-icon">
                 <img
-                  src="assets/img/edit.svg"
+                  src="assets/img/job.svg"
                   alt="edit"
                   width="16"
                   height="16"
                 />
               </figure>
             </div>
-            <p class="nav-item__text nav-item__text-blue inline-block">Post</p>
+            <p class="nav-item__text nav-item__text-pink inline-block">Jobs</p>
           </div>
-          <div class="warp__nav-item warp__nav-item-red inline-block">
-            <div class="nav-item__circle nav-item__circle-red inline-block">
+          <div class="warp__nav-item warp__nav-item-skyblue inline-block">
+            <div class="nav-item__circle nav-item__circle-skyblue inline-block">
               <figure class="nav-item__circle-icon">
                 <img
-                  src="assets/img/tick-icon.svg"
+                  src="assets/img/done.svg"
                   alt="verified"
                   width="16"
                   height="16"
@@ -152,11 +156,11 @@
             </div>
             <p class="nav-item__text inline-block">Applied</p>
           </div>
-          <div class="warp__nav-item warp__nav-item-green inline-block">
-            <div class="nav-item__circle nav-item__circle-green inline-block">
+          <div class="warp__nav-item warp__nav-item-purpel inline-block">
+            <div class="nav-item__circle nav-item__circle-purpel inline-block">
               <figure class="nav-item__circle-icon">
                 <img
-                  src="assets/img/people.svg"
+                  src="assets/img/people-green.svg"
                   alt="people"
                   width="16"
                   height="16"
@@ -167,6 +171,126 @@
           </div>
         </nav>
       </header>
+      <div class="work__bg-right">
+        <div class="container horizontal-align">
+          <aside class="work__card-left">
+            <article class="work__card-left-content">
+              <h4 class="card-heading">Ordering Contact Lens Online</h4>
+              <p class="card-desc">
+                There is no denying the fact that the success of an
+                advertisement lies mostly in the headline. The headline should
+                attract the reader and make him read the rest of the
+                advertisement. The headline should be simply catchy and various
+                key points should be embedded when deciding on the headline for
+                the ad. The headline should catch attention of the eye at the
+                first glance.
+              </p>
+            </article>
+          </aside>
+        </div>
+      </div>
+      <div class="work__bg-left">
+        <div class="container horizontal-align">
+          <aside class="work__card-right float-r">
+            <article class="work__card-right-content">
+              <h4 class="card-heading">Ordering Contact Lens Online</h4>
+              <p class="card-desc">
+                There is no denying the fact that the success of an
+                advertisement lies mostly in the headline. The headline should
+                attract the reader and make him read the rest of the
+                advertisement. The headline should be simply catchy and various
+                key points should be embedded when deciding on the headline for
+                the ad. The headline should catch attention of the eye at the
+                first glance. Words in headlines should act as tags for the
+                advertisement.
+              </p>
+            </article>
+          </aside>
+        </div>
+      </div>
     </section>
+    <section class="container horizontal-align input-area">
+      <h3 class="input-area__heading">Subscribe Us</h3>
+      <p class="input-area__desc horizontal-align">
+        Filium morte multavit si sine dubio praeclara sunt, explicabo nemo enim
+        ad minima. Probabo, inquit, modo ista sis aequitate, quam ob rem aperiam
+        eaque gaudere ut.
+      </p>
+      <div class="input-area__holder horizontal-align clerafix">
+        <input class="input-fild" type="email" />
+        <button class="input-sumbit float-r" type="submit">
+          Subscribe
+          <span class="fas fa-arrow-right input-sumbit-icon"></span>
+        </button>
+      </div>
+      <hr class="horizontal-line" />
+    </section>
+    <footer class="footer">
+      <div class="container horizontal-align footer__area">
+        <figure class="footer__logo inline-block">
+          <a href="#!" class="logo logo__size">
+            <img class="logo__size" src="assets/img/treva.png" alt="logo" />
+          </a>
+        </figure>
+        <ul class="footer__nav-holder inline-block">
+          <li class="footer__nav-heading"><h5>Quick Links</h5></li>
+          <li class="footer__nav-item">
+            <a class="footer__nav-item-link" href="#!">About Us</a>
+          </li>
+          <li class="footer__nav-item">
+            <a class="footer__nav-item-link" href="#!">Blog</a>
+          </li>
+          <li class="footer__nav-item">
+            <a class="footer__nav-item-link" href="#!">Contact</a>
+          </li>
+          <li class="footer__nav-item">
+            <a class="footer__nav-item-link" href="#!">FAQ</a>
+          </li>
+        </ul>
+
+        <ul class="footer__nav-holder inline-block">
+          <li class="footer__nav-heading"><h5>Legal Stuff</h5></li>
+          <li class="footer__nav-item">
+            <a class="footer__nav-item-link" href="#!">Disclaimer</a>
+          </li>
+          <li class="footer__nav-item">
+            <a class="footer__nav-item-link" href="#!">Financing</a>
+          </li>
+          <li class="footer__nav-item">
+            <a class="footer__nav-item-link" href="#!">Privacy Policy</a>
+          </li>
+          <li class="footer__nav-item">
+            <a class="footer__nav-item-link" href="#!">Terms of Service</a>
+          </li>
+        </ul>
+
+        <ul class="footer__nav-holder inline-block">
+          <li class="footer__nav-heading"><h5>Social</h5></li>
+          <li class="footer__nav-item">
+            <a class="footer__nav-item-link" href="#!">
+              <span
+                class="footer__nav-social-facebook fab fa-facebook-f"
+              ></span>
+              Facebook
+            </a>
+          </li>
+          <li class="footer__nav-item">
+            <a class="footer__nav-item-link" href="#!">
+              <span class="footer__nav-social-twitter fab fa-twitter"></span>
+              Twitter
+            </a>
+          </li>
+          <li class="footer__nav-item">
+            <a class="footer__nav-item-link" href="#!">
+              <span
+                class="footer__nav-social-instagram fab fa-instagram"
+              ></span>
+              Instagram
+            </a>
+          </li>
+        </ul>
+        <!-- <div class="footer__nav-holder"></div> -->
+      </div>
+    </footer>
   </body>
 </html>
