--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   </head>
   <body>
     <header class="top__header">
-      <nav class="horizontal-align wrapper header__nav">
+      <nav class="horizontal-align wrapper header__nav flex">
         <a href="#!" class="logo logo__size">
           <img class="logo__size" src="assets/img/treva.png" alt="logo" />
         </a>
@@ -91,7 +91,7 @@
         </nav>
       </header>
       <div class="hire__bg-right">
-        <div class="container horizontal-align">
+        <div class="container horizontal-align hire__card-left-blur">
           <aside class="hire__card-left">
             <article class="hire__card-left-content">
               <h4 class="card-heading">The Amazing Hubble</h4>
@@ -107,7 +107,7 @@
         </div>
       </div>
       <div class="hire__bg-left">
-        <div class="container horizontal-align">
+        <div class="container horizontal-align hire__card-right-blur">
           <aside class="hire__card-right float-r">
             <article class="hire__card-right-content">
               <h4 class="card-heading">What If They Let You Run The Hubble</h4>
@@ -172,7 +172,7 @@
         </nav>
       </header>
       <div class="work__bg-right">
-        <div class="container horizontal-align">
+        <div class="container horizontal-align work__card-left-blur">
           <aside class="work__card-left">
             <article class="work__card-left-content">
               <h4 class="card-heading">Ordering Contact Lens Online</h4>
@@ -190,7 +190,7 @@
         </div>
       </div>
       <div class="work__bg-left">
-        <div class="container horizontal-align">
+        <div class="container horizontal-align work__card-right-blur">
           <aside class="work__card-right float-r">
             <article class="work__card-right-content">
               <h4 class="card-heading">Ordering Contact Lens Online</h4>
@@ -226,69 +226,71 @@
       <hr class="horizontal-line" />
     </section>
     <footer class="footer">
-      <div class="container horizontal-align footer__area">
+      <div class="container horizontal-align footer__container flex">
         <figure class="footer__logo inline-block">
           <a href="#!" class="logo logo__size">
             <img class="logo__size" src="assets/img/treva.png" alt="logo" />
           </a>
         </figure>
-        <ul class="footer__nav-holder inline-block">
-          <li class="footer__nav-heading"><h5>Quick Links</h5></li>
-          <li class="footer__nav-item">
-            <a class="footer__nav-item-link" href="#!">About Us</a>
-          </li>
-          <li class="footer__nav-item">
-            <a class="footer__nav-item-link" href="#!">Blog</a>
-          </li>
-          <li class="footer__nav-item">
-            <a class="footer__nav-item-link" href="#!">Contact</a>
-          </li>
-          <li class="footer__nav-item">
-            <a class="footer__nav-item-link" href="#!">FAQ</a>
-          </li>
-        </ul>
+        <nav class="footer__nav-area flex">
+          <ul class="footer__nav-holder inline-block">
+            <li class="footer__nav-heading"><h5>Quick Links</h5></li>
+            <li class="footer__nav-item">
+              <a class="footer__nav-item-link" href="#!">About Us</a>
+            </li>
+            <li class="footer__nav-item">
+              <a class="footer__nav-item-link" href="#!">Blog</a>
+            </li>
+            <li class="footer__nav-item">
+              <a class="footer__nav-item-link" href="#!">Contact</a>
+            </li>
+            <li class="footer__nav-item">
+              <a class="footer__nav-item-link" href="#!">FAQ</a>
+            </li>
+          </ul>
 
-        <ul class="footer__nav-holder inline-block">
-          <li class="footer__nav-heading"><h5>Legal Stuff</h5></li>
-          <li class="footer__nav-item">
-            <a class="footer__nav-item-link" href="#!">Disclaimer</a>
-          </li>
-          <li class="footer__nav-item">
-            <a class="footer__nav-item-link" href="#!">Financing</a>
-          </li>
-          <li class="footer__nav-item">
-            <a class="footer__nav-item-link" href="#!">Privacy Policy</a>
-          </li>
-          <li class="footer__nav-item">
-            <a class="footer__nav-item-link" href="#!">Terms of Service</a>
-          </li>
-        </ul>
+          <ul class="footer__nav-holder inline-block">
+            <li class="footer__nav-heading"><h5>Legal Stuff</h5></li>
+            <li class="footer__nav-item">
+              <a class="footer__nav-item-link" href="#!">Disclaimer</a>
+            </li>
+            <li class="footer__nav-item">
+              <a class="footer__nav-item-link" href="#!">Financing</a>
+            </li>
+            <li class="footer__nav-item">
+              <a class="footer__nav-item-link" href="#!">Privacy Policy</a>
+            </li>
+            <li class="footer__nav-item">
+              <a class="footer__nav-item-link" href="#!">Terms of Service</a>
+            </li>
+          </ul>
 
-        <ul class="footer__nav-holder inline-block">
-          <li class="footer__nav-heading"><h5>Social</h5></li>
-          <li class="footer__nav-item">
-            <a class="footer__nav-item-link" href="#!">
-              <span
-                class="footer__nav-social-facebook fab fa-facebook-f"
-              ></span>
-              Facebook
-            </a>
-          </li>
-          <li class="footer__nav-item">
-            <a class="footer__nav-item-link" href="#!">
-              <span class="footer__nav-social-twitter fab fa-twitter"></span>
-              Twitter
-            </a>
-          </li>
-          <li class="footer__nav-item">
-            <a class="footer__nav-item-link" href="#!">
-              <span
-                class="footer__nav-social-instagram fab fa-instagram"
-              ></span>
-              Instagram
-            </a>
-          </li>
-        </ul>
+          <ul class="footer__nav-holder inline-block">
+            <li class="footer__nav-heading"><h5>Social</h5></li>
+            <li class="footer__nav-item">
+              <a class="footer__nav-item-link" href="#!">
+                <span
+                  class="footer__nav-social-facebook fab fa-facebook-f"
+                ></span>
+                Facebook
+              </a>
+            </li>
+            <li class="footer__nav-item">
+              <a class="footer__nav-item-link" href="#!">
+                <span class="footer__nav-social-twitter fab fa-twitter"></span>
+                Twitter
+              </a>
+            </li>
+            <li class="footer__nav-item">
+              <a class="footer__nav-item-link" href="#!">
+                <span
+                  class="footer__nav-social-instagram fab fa-instagram"
+                ></span>
+                Instagram
+              </a>
+            </li>
+          </ul>
+        </nav>
         <!-- <div class="footer__nav-holder"></div> -->
       </div>
     </footer>
