rws medium small screen

--- a/index.html
+++ b/index.html
@@ -46,11 +46,11 @@
       </main>
     </section>
     <section class="hire-warp">
-      <header class="warp__header horizontal-align">
+      <header class="warp__header container horizontal-align">
         <h3 class="warp__heading">Hire</h3>
-        <nav class="warp__nav">
-          <div class="warp__nav-item warp__nav-item-blue inline-block">
-            <div class="nav-item__circle nav-item__circle-blue inline-block">
+        <nav class="warp__nav flex">
+          <div class="warp__nav-item warp__nav-item-blue flex">
+            <div class="nav-item__circle nav-item__circle-blue">
               <figure class="nav-item__circle-icon">
                 <img
                   src="assets/img/edit.svg"
@@ -60,10 +60,10 @@
                 />
               </figure>
             </div>
-            <p class="nav-item__text nav-item__text-blue inline-block">Post</p>
+            <p class="nav-item__text nav-item__text-blue">Post</p>
           </div>
-          <div class="warp__nav-item warp__nav-item-red inline-block">
-            <div class="nav-item__circle nav-item__circle-red inline-block">
+          <div class="warp__nav-item warp__nav-item-red flex">
+            <div class="nav-item__circle nav-item__circle-red">
               <figure class="nav-item__circle-icon">
                 <img
                   src="assets/img/tick-icon.svg"
@@ -73,10 +73,10 @@
                 />
               </figure>
             </div>
-            <p class="nav-item__text inline-block">Applied</p>
+            <p class="nav-item__text">Applied</p>
           </div>
-          <div class="warp__nav-item warp__nav-item-green inline-block">
-            <div class="nav-item__circle nav-item__circle-green inline-block">
+          <div class="warp__nav-item warp__nav-item-green flex">
+            <div class="nav-item__circle nav-item__circle-green">
               <figure class="nav-item__circle-icon">
                 <img
                   src="assets/img/people.svg"
@@ -86,7 +86,7 @@
                 />
               </figure>
             </div>
-            <p class="nav-item__text inline-block">Assigned</p>
+            <p class="nav-item__text">Assigned</p>
           </div>
         </nav>
       </header>
@@ -127,9 +127,9 @@
       </div>
     </section>
     <section class="work-warp">
-      <header class="warp__header horizontal-align">
+      <header class="warp__header container horizontal-align">
         <h3 class="warp__heading">Work</h3>
-        <nav class="warp__nav">
+        <nav class="warp__nav flex">
           <div class="warp__nav-item warp__nav-item-pink inline-block">
             <div class="nav-item__circle nav-item__circle-pink inline-block">
               <figure class="nav-item__circle-icon">
