--- a/index.html
+++ b/index.html
@@ -130,8 +130,8 @@
       <header class="warp__header container horizontal-align">
         <h3 class="warp__heading">Work</h3>
         <nav class="warp__nav flex">
-          <div class="warp__nav-item warp__nav-item-pink inline-block">
-            <div class="nav-item__circle nav-item__circle-pink inline-block">
+          <div class="warp__nav-item warp__nav-item-pink flex">
+            <div class="nav-item__circle nav-item__circle-pink">
               <figure class="nav-item__circle-icon">
                 <img
                   src="assets/img/job.svg"
@@ -141,10 +141,10 @@
                 />
               </figure>
             </div>
-            <p class="nav-item__text nav-item__text-pink inline-block">Jobs</p>
+            <p class="nav-item__text nav-item__text-pink">Jobs</p>
           </div>
-          <div class="warp__nav-item warp__nav-item-skyblue inline-block">
-            <div class="nav-item__circle nav-item__circle-skyblue inline-block">
+          <div class="warp__nav-item warp__nav-item-skyblue flex">
+            <div class="nav-item__circle nav-item__circle-skyblue">
               <figure class="nav-item__circle-icon">
                 <img
                   src="assets/img/done.svg"
@@ -154,10 +154,10 @@
                 />
               </figure>
             </div>
-            <p class="nav-item__text inline-block">Applied</p>
+            <p class="nav-item__text">Applied</p>
           </div>
-          <div class="warp__nav-item warp__nav-item-purpel inline-block">
-            <div class="nav-item__circle nav-item__circle-purpel inline-block">
+          <div class="warp__nav-item warp__nav-item-purpel flex">
+            <div class="nav-item__circle nav-item__circle-purpel">
               <figure class="nav-item__circle-icon">
                 <img
                   src="assets/img/people-green.svg"
@@ -167,7 +167,7 @@
                 />
               </figure>
             </div>
-            <p class="nav-item__text inline-block">Assigned</p>
+            <p class="nav-item__text">Assigned</p>
           </div>
         </nav>
       </header>
