rwd small-screen

--- a/index.html
+++ b/index.html
@@ -216,9 +216,11 @@
         ad minima. Probabo, inquit, modo ista sis aequitate, quam ob rem aperiam
         eaque gaudere ut.
       </p>
-      <div class="input-area__holder horizontal-align clerafix">
-        <input class="input-fild" type="email" />
-        <button class="input-sumbit float-r" type="submit">
+      <div class="input-area__holder flex">
+        <div class="input-field__holder">
+          <input class="input-field" type="email" />
+        </div>
+        <button class="input-sumbit" type="submit">
           Subscribe
           <span class="fas fa-arrow-right input-sumbit-icon"></span>
         </button>
