--- a/index.html
+++ b/index.html
@@ -139,6 +139,7 @@
                 >Privacy Policies</a
               >
             </label>
+            <p class="er-msg">Error message</p>
           </div>
           <div class="my-40 signup-btn__holder">
             <button class="secondary-btn" type="reset" id="signupCancel">
